--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
+	"name": "NOJ",
+	"description": "NUC Online Judge System.",
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"type": "project",
@@ -17,7 +17,10 @@
 		],
 		"psr-4": {
 			"App\\": "app/"
-		}
+		},
+		"files": [
+            "app/helpers.php"
+        ]
 	},
 	"autoload-dev": {
 		"classmap": [
