--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"illuminate/html": "~5.0",
+		"FortAwesome/Font-Awesome": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
