--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 			"App\\": "app/"
 		},
 		"files": [
-            "app/helpers.php"
+            "app/Http/helpers.php"
         ]
 	},
 	"autoload-dev": {
