--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
-		"FortAwesome/Font-Awesome": "*"
+		"FortAwesome/Font-Awesome": "*",
+		"nesbot/carbon": "~1.14"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
