--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
 		"FortAwesome/Font-Awesome": "*",
-		"nesbot/carbon": "~1.14"
+		"nesbot/carbon": "~1.14",
+		"sleeping-owl/admin": "2.*",
+		"intervention/imagecache": "~2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
