--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
 		"illuminate/html": "~5.0",
 		"FortAwesome/Font-Awesome": "*",
 		"nesbot/carbon": "~1.14",
-		"intervention/imagecache": "~2.1",
-		"cartalyst/sentry": "dev-feature/laravel-5"
+		"intervention/imagecache": "~2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
