--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"illuminate/html": "~5.0",
 		"FortAwesome/Font-Awesome": "*",
 		"nesbot/carbon": "~1.14",
-		"intervention/imagecache": "~2.1"
+		"intervention/imagecache": "~2.1",
+		"laravel/socialite": "~2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
