--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"FortAwesome/Font-Awesome": "*",
 		"nesbot/carbon": "~1.14",
 		"intervention/imagecache": "~2.1",
-		"laravel/socialite": "~2.0"
+		"laravel/socialite": "~2.0",
+		"graham-campbell/htmlmin": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
